Add basic integration with notion and telegram

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "telegraf": "^4.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.3.1"
   }
 }
