--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.21.1",
+    "@notionhq/client": "^0.1.9",
     "telegraf": "^4.3.0"
   },
   "devDependencies": {
