--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "e-and-t-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "lt --port 5000 --subdomain=fathomless-oasis-27700 & DEBUG='telegraf:*' heroku local web",
     "deploy": "git push heroku main"
