--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "lt --port 5000 --subdomain=fathomless-oasis-27700 & DEBUG='telegraf:*' heroku local web",
     "deploy": "git push heroku main"
   },
+  "type": "module",
   "engines": {
     "node": "14.x"
   },
